--- a/index.html
+++ b/index.html
@@ -22,6 +22,27 @@
                 </ul>
             </div>
         </nav>
+        <section id="profile">
+            <div class="section_pic-container">
+                <img src="./assets/profile1.jpg" alt="Monesha Dhali profile picture">
+            </div>
+            <div class="section_text">
+                <p class="section_text_p1">Hello, I'm</p>
+                <h1 class="title">Monesha Dhali</h1>
+                <p class="section_text_p2">An aspiring Software Engineer</p>
+                <div class="btn-container">
+                    <button class="btn btn-color-2" onclick="window.open('./assets/MoneshaDhali.pdf')">Download CV</button>
+                    <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+                </div>
+                <div id="socials-container">
+                    <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='https://linkedin.com/in/moneshadhali/'">
+                    <img src="./assets/github.png" alt="My github profile" class="icon" onclick="location.href='https://github.com/moneshadhali'">
+                </div>
+            </div>
+        </section>
+        <section id="about">
+            
+        </section>
         <script src="script.js"></script>
     </body>
 </html>
