About and Skill Section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="navbar-links">
                 <ul>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#experience">experience</a></li>
                     <li><a href="#portfolio">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -41,7 +42,115 @@
             </div>
         </section>
         <section id="about">
-            
+            <p class="section_text_p1">Get To Know More</p>
+            <h1 class="title">About Me</h1>
+            <div class="section-container">
+                <div class="section_pic-container">
+                    <img src="./assets/profile2.jpg" alt="My profile picture" class="about-pic">
+                </div>
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+                            <h3>Experience</h3>
+                            <p>3+ years <br />Frontend Development</p>
+                        </div>
+                        <div class="details-container">
+                            <img src="./assets/education.png" alt="Education Icon" class="icon">
+                            <h3>Education</h3>
+                            <p>BEng Software Engineer (1st class honours)</p>
+                        </div>
+                    </div>
+                    <div class="text-container">
+                        <p>As a dedicated graduate in Software Engineering, I am passionate about establishing a career in the ever-evolving technology industry. My pursuit of excellence drives me to consistently achieve optimal results in projects, leveraging my adaptability, strong organizational experience, and exceptional abilities honed through a background in customer service. Actively seeking opportunities to enhance my technological proficiency, my academic journey at the University of Westminster has equipped me with hands-on experience and expertise in various programming languages, including Python, HTML, CSS, JavaScript, and Java. I am confident in my ability to quickly and efficiently undertake new tasks, making me a dependable asset with my unwavering commitment and organizational acumen in any team or project.</p>
+                        <br/>
+                        <p>My journey in the world of technology has just begun, and I am excited to learn and grow with each new project.</p>      
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow" onclick="location.href='./#experience'">
+        </section>
+        <section id="experience">
+            <p class="section_text_p1">Explore My</p>
+            <h1 class="title">Experience</h1>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <h2 class="experience-subtitle">Frontend & Backend Developments</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>HTML</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>CSS</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>JavaScript</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>UI/UX Design</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>SQL & Database</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>Git & Github</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="details-container">
+                        <h2 class="experience-subtitle">Programming Languages</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>Java</h3>
+                                    <p>Basic (solid foundation)</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>Python</h3>
+                                    <p>Basic Foundation</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
+                                    <h3>MATLAB</h3>
+                                    <p>Basic Foundation</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
         </section>
         <script src="script.js"></script>
     </body>
