--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar">
+        <nav class="navbar" id="top">
             <div class="logo">Monesha Dhali</div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">experience</a></li>
-                    <li><a href="#portfolio">Projects</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -150,7 +150,17 @@
                     </div>
                 </div>
             </div>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+        </section>
+        <section id="projects">
+            <p class="section_text_p1">Browse My Recent</p>
+            <h1 class="title">Projects</h1>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
+        </section>
+        <section id="contact">
+            <p class="section_text_p1">Please</p>
+            <h1 class="title">Contact</h1>
+            <img src="./assets/toparrow.png" alt="Top Arrow icon" class="icon arrow" onclick="location.href='./#top'">
         </section>
         <script src="script.js"></script>
     </body>
