--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
                             <article>
                                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
                                 <div>
+                                    <h3>Javascript</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                                <div>
                                     <h3>Python</h3>
                                     <p>Basic Foundation</p>
                                 </div>
@@ -158,8 +165,10 @@
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
         </section>
         <section id="contact">
-            <p class="section_text_p1">Please</p>
+            <p class="section_text_p1">Get in Touch</p>
             <h1 class="title">Contact</h1>
+            
+
             <img src="./assets/toparrow.png" alt="Top Arrow icon" class="icon arrow" onclick="location.href='./#top'">
         </section>
         <script src="script.js"></script>
