--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar" id="top">
+        <nav class="navbar">
             <div class="logo">Monesha Dhali</div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
@@ -167,10 +167,31 @@
         <section id="contact">
             <p class="section_text_p1">Get in Touch</p>
             <h1 class="title">Contact</h1>
-            
+            <div class="contact-info-upper-container">
+                <div class="contact-info-container">
+                    <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
+                    <p><a href="mailto:dhalimonesha@gmail.com">dhalimonesha@gmail.com</a></p>
+                </div>
+                <div class="contact-info-container">
+                    <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon">
+                    <p><a href="https://www.linkedin.com/in/moneshadhali/">Linkedin</a></p>
+                </div>
+            </div>
 
-            <img src="./assets/toparrow.png" alt="Top Arrow icon" class="icon arrow" onclick="location.href='./#top'">
         </section>
+        <footer>
+            <nav>
+                <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <p>Copyright &#169; 2023 Monesha Dhali. All rights reserved. </p>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
