--- a/index.html
+++ b/index.html
@@ -162,6 +162,31 @@
         <section id="projects">
             <p class="section_text_p1">Browse My Recent</p>
             <h1 class="title">Projects</h1>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                  <div class="details-container color-container">
+                    <div class="article-container">
+                      <img src="./assets/project1InvestNext.png" alt="Project 1 - InvestNext" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <div class="btn-container">
+                      <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/fausteire/AthenaHackathon'">Github</button>
+                      <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.youtube.com/shorts/_XH1BcqY2J4'">Live Demo</button>
+                      <button class="btn btn-color-2 project-btn" onclick="location.href='https://docs.google.com/presentation/d/1gE_pMWArKF6F7ByQHtibqAh72RnxM-e7fpQR6Knn7II/edit?usp=sharing'">PowerPoint</button>
+                    </div>
+                  </div>
+                  <div class="details-container color-container">
+                    <div class="article-container">
+                      <img src="./assets/project2_langwise.jpg" alt="Project 2" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NeonNingen/GroupE_CW_Project.git'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://drive.google.com/file/d/18htomUVdc-PWRl8EJVt54N_FTd_F_ie-/view?usp=sharing'">Live Demo</button>
+                      </div>
+                  </div>
+                </div>
+            </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
         </section>
         <section id="contact">
