--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   </div>
                   <div class="details-container color-container">
                     <div class="article-container">
-                      <img src="./assets/project2_langwise.jpg" alt="Project 2" class="project-img" />
+                      <img src="./assets/project2.PNG" alt="Project 2" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
@@ -185,6 +185,8 @@
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://drive.google.com/file/d/18htomUVdc-PWRl8EJVt54N_FTd_F_ie-/view?usp=sharing'">Live Demo</button>
                       </div>
                   </div>
+                  
+                  
                 </div>
             </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
@@ -209,7 +211,7 @@
                 <div class="nav-links-container">
                     <ul class="nav-links">
                         <li><a href="#about">About</a></li>
-                        <li><a href="#experience">experience</a></li>
+                        <li><a href="#experience">Experience</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
