--- a/index.html
+++ b/index.html
@@ -177,14 +177,33 @@
                   </div>
                   <div class="details-container color-container">
                     <div class="article-container">
-                      <img src="./assets/project2.PNG" alt="Project 2" class="project-img" />
+                      <img src="./assets/prj4-fyp.PNG" alt="Project 2" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.youtube.com/watch?v=OdGmvXxO0UQ'">Live Demo</button>
+                      </div>
+                  </div>
+                  <div class="details-container color-container">
+                    <div class="article-container">
+                      <img src="./assets/Proj3SWeatherApp.PNG" alt="Project 3" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/moneshadhali/Basic-Weather-App.git'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://moneshadhali.github.io/Basic-Weather-App/'">Live Demo</button>
+                      </div>
+                  </div> 
+                  <div class="details-container color-container">
+                    <div class="article-container">
+                      <img src="./assets/project2.PNG" alt="Project 4" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Four</h2>
+                    <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NeonNingen/GroupE_CW_Project.git'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://drive.google.com/file/d/18htomUVdc-PWRl8EJVt54N_FTd_F_ie-/view?usp=sharing'">Live Demo</button>
-                      </div>
-                  </div>              
+                    </div>
+                  </div>             
                 </div>
             </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
