added capstone project info

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project1InvestNext.png"
-                alt="Project 1 - InvestNext"
+                src="./assets/proj5Delivery.png"
+                alt="Shot Put Delivery Logo"
                 class="project-img"
               />
             </div>
@@ -272,19 +272,19 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/fausteire/AthenaHackathon'"
+                onclick="location.href='https://github.com/moneshadhali/Capstone_Project'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.youtube.com/shorts/_XH1BcqY2J4'"
+                onclick="location.href='https://drive.google.com/file/d/121PaqT298lnSRt-SiuejAWM2es9z4tem/view?usp=sharing'"
               >
                 Live Demo
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://docs.google.com/presentation/d/1gE_pMWArKF6F7ByQHtibqAh72RnxM-e7fpQR6Knn7II/edit?usp=sharing'"
+                onclick="location.href='https://drive.google.com/file/d/12AJUGxuOf6panI3HeeVbD6wvlMXOlmgA/view?usp=sharing'"
               >
                 PowerPoint
               </button>
@@ -353,6 +353,36 @@
                 onclick="location.href='https://drive.google.com/file/d/18htomUVdc-PWRl8EJVt54N_FTd_F_ie-/view?usp=sharing'"
               >
                 Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project1InvestNext.png"
+                alt="InvestNext project image"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project Five</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/fausteire/AthenaHackathon'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.youtube.com/shorts/_XH1BcqY2J4'"
+              >
+                Live Demo
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://docs.google.com/presentation/d/1gE_pMWArKF6F7ByQHtibqAh72RnxM-e7fpQR6Knn7II/edit?usp=sharing'"
+              >
+                PowerPoint
               </button>
             </div>
           </div>
