added cinemaverick backend project info

--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Proj3SWeatherApp.PNG"
-                alt="Project 3"
+                src="./assets/proj3Cinemavericks.png"
+                alt="picture of axolotl watching movie"
                 class="project-img"
               />
             </div>
@@ -320,15 +320,15 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/moneshadhali/Basic-Weather-App.git'"
+                onclick="location.href='https://github.com/GJaradat/cinemavericks?tab=readme-ov-file'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://moneshadhali.github.io/Basic-Weather-App/'"
+                onclick="location.href='https://docs.google.com/presentation/d/1AOqTCTfz316ATpkMlqNPxK7r-yp01pzs/edit?usp=sharing&ouid=107736136568167606711&rtpof=true&sd=true'"
               >
-                Live Demo
+                PowerPoint
               </button>
             </div>
           </div>
@@ -383,6 +383,30 @@
                 onclick="location.href='https://docs.google.com/presentation/d/1gE_pMWArKF6F7ByQHtibqAh72RnxM-e7fpQR6Knn7II/edit?usp=sharing'"
               >
                 PowerPoint
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/Proj6SWeatherApp.PNG"
+                alt="Project 6"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project Six</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/moneshadhali/Basic-Weather-App.git'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://moneshadhali.github.io/Basic-Weather-App/'"
+              >
+                Live Demo
               </button>
             </div>
           </div>
