added conversa frontend  project info

--- a/index.html
+++ b/index.html
@@ -410,6 +410,30 @@
               </button>
             </div>
           </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/proj7-chatbox.png"
+                alt="Toad screaming into the void"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project Seven</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/zakjama0/conversa_front_end_project'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://docs.google.com/presentation/d/11wKN58P-QlgMZQnJ0uqXkhOEO0SjCcB8/edit?usp=sharing&ouid=107736136568167606711&rtpof=true&sd=true'"
+              >
+                PowerPoint
+              </button>
+            </div>
+          </div>
         </div>
       </div>
       <img
