Added more skills to the experience section

--- a/index.html
+++ b/index.html
@@ -169,8 +169,30 @@
                   class="icon"
                 />
                 <div>
+                  <h3>SpringBoot</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
                   <h3>UI/UX Design</h3>
                   <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React JS</h3>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
